feat(data-products): create data-product
add data-product-create-panel component

DIGIB2-1351
