# src/entities/openapi/model/dataProductStateEnum.ts
@@ -1,0 +1,17 @@
+/**
+ * agridata.ch API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export const DataProductStateEnum = {
+    Draft: 'DRAFT',
+    Active: 'ACTIVE'
+} as const;
+export type DataProductStateEnum = typeof DataProductStateEnum[keyof typeof DataProductStateEnum];
+
