# src/entities/openapi/model/models.ts
@@ -11,7 +11,12 @@ export * from './consentRequestStateEnum';
 export * from './contractRevisionDto';
 export * from './contractRevisionSignatureDto';
 export * from './createConsentRequestDto';
+export * from './dataProductDescriptionDto';
 export * from './dataProductDto';
+export * from './dataProductDtoStateCode';
+export * from './dataProductNameDto';
+export * from './dataProductStateEnum';
+export * from './dataProductUpdateDto';
 export * from './dataProviderDto';
 export * from './dataProviderExceptionDto';
 export * from './dataProviderReferenceDto';
@@ -30,6 +35,7 @@ export * from './exceptionDto';
 export * from './exceptionDto1';
 export * from './exceptionEnum';
 export * from './farmTypeEnum';
+export * from './flowCodeEnum';
 export * from './inboxEntryDto';
 export * from './legalFormEnum';
 export * from './markAsReadRequestDto';
@@ -41,6 +47,8 @@ export * from './pageResponseDtoInboxEntryDto';
 export * from './pageResponseDtoUserInfoDto';
 export * from './producerIdentifier';
 export * from './resourceQueryDto';
+export * from './restClientDto';
+export * from './restClientMethodCodeEnum';
 export * from './sealAttemptStateEnum';
 export * from './signatureSlotCodeEnum';
 export * from './signatureTypeEnum';
