# src/entities/openapi/model/restClientMethodCodeEnum.ts
@@ -1,0 +1,17 @@
+/**
+ * agridata.ch API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export const RestClientMethodCodeEnum = {
+    Post: 'POST',
+    Get: 'GET'
+} as const;
+export type RestClientMethodCodeEnum = typeof RestClientMethodCodeEnum[keyof typeof RestClientMethodCodeEnum];
+
